# tap-dbt-semantic

./: .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_dbt_semantic/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
